[package]
name = "god-four-am"
version = "0.1.0"
authors = ["Kriston Costa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.8.1"
rand = { version = "0.6.5", features = ["stdweb"] }
euclid = "0.20.7"
instant = { version = "0.1.2", features = ["stdweb"]}
serde= { version = "^1.0.44", features = ["derive"] }
serde_json = "^1.0.44"

[lib]
crate-type = ["cdylib"]

[dependencies.legion]
git = "https://github.com/TomGillen/legion.git"
branch = "master"
default-features = false
